deployment and github button for nextdate

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/nextDate.png" alt="" /></a>
 								<h3>nextDate</h3>
-								<p>Full stack MERN dating app</p>
+								<p>Full stack MERN dating app</p><br>
+								<ul class="actions small">
+									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://github.com/Haziq12/nextDate" target="_blank" class="button small">Link To GitHub</a></li>
+								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/boxd.png" alt="" /></a>
