--- a/index.html
+++ b/index.html
@@ -50,19 +50,31 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/boxd.png" alt="" /></a>
 								<h3>Boxd</h3>
-								<p>Pyton/Flask ecommerce website</p>
+								<p>Pyton/Flask ecommerce website</p><br>
+								<ul class="actions small">
+									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://github.com/Haziq12/project4" target="_blank" class="button small">Link To GitHub</a></li>
+								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/nyrealty.png" alt="" /></a>
 								<h3>NYC Realty</h3>
-								<p>Real Estate Website</p>
+								<p>Real Estate Website</p><br>
+								<ul class="actions small">
+									<li><a href="https://nyrealty.herokuapp.com/" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://github.com/Haziq12/NYCRealEstate" target="_blank" class="button small">Link To GitHub</a></li>
+								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/minesweeper.png" alt="" /></a>
 								<h3>Minesweeper</h3>
-								<p>Logic game</p>
+								<p>Logic game</p><br>
+								<ul class="actions small">
+									<li><a href="https://haziq12.github.io/Minesweeper/" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://github.com/Haziq12/Minesweeper" target="_blank" class="button small">Link To GitHub</a></li>
+								</ul>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -75,7 +87,7 @@
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				
@@ -480,7 +492,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/haziq-naeem/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/Haziq12" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" target="_blank" class="icon solid fa-file"><span class="label">Resume</span></a></li>
+						<li><a href="https://docs.google.com/viewerng/viewer?url=https://github.com/Haziq12/Resume/raw/main/Resume.pdf" target="_blank" class="icon solid fa-file"><span class="label">Resume</span></a></li>
 					</ul>
 				</div>
 			</footer>
