remove old tech loghos

--- a/index.html
+++ b/index.html
@@ -104,13 +104,11 @@
 										<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="20px"/>
 									JavaScript
 									</li>
-									
-          
-									<li class="icon brands fa-react">React</li>
-									<li class="icon brands fa-node-js">Node.js</li>
-									<li class="icon brands fa-node">Express</li>
-									<li class="icon brands fa-css3">CSS</li>
-									<li class="icon brands fa-html5">HTML</li>
+									<li>React</li>
+									<li >Node.js</li>
+									<li >Express</li>
+									<li >CSS</li>
+									<li >HTML</li>
 								</ul>
 							</div>
 
@@ -118,12 +116,12 @@
 								<div class="col-6 col-12-xsmall">
 									<!-- <h5>Unordered</h5> -->
 									<ul>
-										<li class="icon brands fa-python">Python</li>
-										<li class="icon brands fa-react">Flask</li>
-										<li class="icon brands fa-table">SQL</li>
-										<li class="icon brands fa-database">PostgreSQL</li>
-										<li class="icon brands fa-database">MongoDB</li>
-										<li class="icon brands fa-database">Mongoose</li>
+										<li>Python</li>
+										<li>Flask</li>
+										<li>SQL</li>
+										<li>PostgreSQL</li>
+										<li>MongoDB</li>
+										<li>Mongoose</li>
 									</ul>
 								</div>
 
