--- a/index.html
+++ b/index.html
@@ -104,11 +104,26 @@
 										<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="20px"/>
 									JavaScript
 									</li>
-									<li>React</li>
-									<li >Node.js</li>
-									<li >Express</li>
-									<li >CSS</li>
-									<li >HTML</li>
+									<li>	
+										<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" height="20px" />
+										React
+									</li>
+									<li>
+										<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" height="20px"/>
+										Node.js
+									</li>
+									<li>
+										<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" height="20px"/>
+									Express
+									</li>
+									<li>
+										<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" height="20px"/>
+									CSS
+									</li>
+									<li>
+										<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain.svg" height="20px"/>
+									HTML
+									</li>
 								</ul>
 							</div>
 
@@ -116,12 +131,24 @@
 								<div class="col-6 col-12-xsmall">
 									<!-- <h5>Unordered</h5> -->
 									<ul>
-										<li>Python</li>
-										<li>Flask</li>
-										<li>SQL</li>
-										<li>PostgreSQL</li>
-										<li>MongoDB</li>
-										<li>Mongoose</li>
+										<li>
+											<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" height="20px"/>
+										Python</li>
+										<li>
+											<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg" height="20px"/>
+										Flask</li>
+										<li>
+											<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlalchemy/sqlalchemy-original.svg" height="20px"/>
+										SQL</li>
+										<li>
+											<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-plain.svg" height="20px"/>
+										PostgreSQL</li>
+										<li>
+											<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" height="20px"/>
+										MongoDB</li>
+										<li>
+											<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain.svg" height="20px"/>
+										Mongoose</li>
 									</ul>
 								</div>
 
