get in touch update

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 					<!-- <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a> -->
 					<a href="#" class="image avatar"><img src="images/IMG_3260.jpeg" alt="" /></a>
 					<h1><strong>I am Haziq</strong><br />
-					Engineer<br />
-					Developer<br />
-					Creative</h1>
+						Developer<br />
+						Engineer<br />
+						Creator</h1>
 				</div>
 			</header>
 
@@ -159,7 +159,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p></p>
+						<!-- <p></p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -172,7 +172,7 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</div>
+							</div> -->
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<!-- <li>
@@ -186,8 +186,9 @@
 										000-000-0000
 									</li> -->
 									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">haziqnaeem36@gmail.com</a>
+										<a href="#" style="margin-right: 30px;">haziqnaeem36@gmail.com</a>
+										<a href="https://github.com/Haziq12" target="_blank" style="margin-right: 30px;">GitHub</a>
+										<a href="https://www.linkedin.com/in/haziq-naeem/" target="_blank" >LinkedIn</a>
 									</li>
 								</ul>
 							</div>
