--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 										000-000-0000
 									</li> -->
 									<li>
-										<a href="#" style="margin-right: 30px;">haziqnaeem36@gmail.com</a>
+										<a style="margin-right: 30px;">haziqnaeem36@gmail.com</a>
 										<a href="https://github.com/Haziq12" target="_blank" style="margin-right: 30px;">GitHub</a>
 										<a href="https://www.linkedin.com/in/haziq-naeem/" target="_blank" >LinkedIn</a>
 									</li>
