--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								</ul>
 							</div> -->
 							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
+								<ul style="padding-right: 0px;" class="labeled-icons">
 									<!-- <li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 										1234 Rd<br />
