--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/haziq-naeem/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/Haziq12" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="#" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 						<li><a href="https://docs.google.com/viewerng/viewer?url=https://github.com/Haziq12/Resume/raw/main/Resume.pdf" target="_blank" class="icon solid fa-file"><span class="label">Resume</span></a></li>
 					</ul>
 					<ul>
