--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/nextDate.png" alt="" /></a>
+								<a href="images/fulls/nextDate1.png" class="image fit thumb"><img src="images/thumbs/nextDate.png" alt="" /></a>
 								<h3>nextDate</h3>
 								<p>Full stack MERN dating app</p><br>
 								<ul class="actions small">
