--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/boxd.png" alt="" /></a>
+								<a href="images/fulls/boxxd1.png" class="image fit thumb"><img src="images/thumbs/boxd.png" alt="" /></a>
 								<h3>Boxd</h3>
 								<p>Pyton/Flask ecommerce website</p><br>
 								<ul class="actions small">
@@ -57,7 +57,7 @@
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/nyrealty.png" alt="" /></a>
+								<a href="images/fulls/RE1.png" class="image fit thumb"><img src="images/thumbs/nyrealty.png" alt="" /></a>
 								<h3>NYC Realty</h3>
 								<p>Real Estate Website</p><br>
 								<ul class="actions small">
@@ -66,7 +66,7 @@
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/minesweeper.png" alt="" /></a>
+								<a href="images/fulls/ms1.png" class="image fit thumb"><img src="images/thumbs/minesweeper.png" alt="" /></a>
 								<h3>Minesweeper</h3>
 								<p>Logic game</p><br>
 								<ul class="actions small">
