--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/nextDate1.png" class="image fit thumb"><img src="images/thumbs/hack.png" alt="" /></a>
+								<h3>nextDate</h3>
+								<p>Full stack MERN dating app</p><br>
+								<ul class="actions small">
+									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://github.com/Haziq12/nextDate" target="_blank" class="button small">Link To GitHub</a></li>
+								</ul>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/nextDate1.png" class="image fit thumb"><img src="images/thumbs/nextDate.png" alt="" /></a>
 								<h3>nextDate</h3>
 								<p>Full stack MERN dating app</p><br>
