--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/nextDate1.png" class="image fit thumb"><img src="images/thumbs/hack.png" alt="" /></a>
-								<h3>nextDate</h3>
-								<p>Full stack MERN dating app</p><br>
+								<h3>Unlocking Communities Data Viz App</h3>
+								<p>Runner up to the International Aid Hackathon. Worked on a cross functional team of UX Designers and Data Scientists to develop a fast, lightweight application for the
+									C-Suite that delivered data on water filtration distribution in Haiti.</p><br>
 								<ul class="actions small">
 									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/nextDate" target="_blank" class="button small">Link To GitHub</a></li>
@@ -50,7 +51,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/nextDate1.png" class="image fit thumb"><img src="images/thumbs/nextDate.png" alt="" /></a>
 								<h3>nextDate</h3>
-								<p>Full stack MERN dating app</p><br>
+								<p>Collaborated with developers using SCRUM methodology to design and develop a full stack MERN application that enables users to meet, date, and connect with people. Implemeted TicketMaster API to help users create date plans.</p><br>
 								<ul class="actions small">
 									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/nextDate" target="_blank" class="button small">Link To GitHub</a></li>
