add hackathon and descriptions

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/nextDate1.png" class="image fit thumb"><img src="images/thumbs/hack.png" alt="" /></a>
+								<a href="images/fulls/hack1.png" class="image fit thumb"><img src="images/thumbs/hack.png" alt="" /></a>
 								<h3>Unlocking Communities Data Viz App</h3>
 								<p>Runner up to the International Aid Hackathon. Worked on a cross functional team of UX Designers and Data Scientists to develop a fast, lightweight application for the
 									C-Suite that delivered data on water filtration distribution in Haiti.</p><br>
@@ -60,7 +60,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/boxxd1.png" class="image fit thumb"><img src="images/thumbs/boxd.png" alt="" /></a>
 								<h3>Boxd</h3>
-								<p>Pyton/Flask ecommerce website</p><br>
+								<p>Built ecommerce website with Python, Flask, Jinja, and PostgreSQL. Designed backend models, built out model associations, wrote logic for all database queries and served data to front end</p><br>
 								<ul class="actions small">
 									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/project4" target="_blank" class="button small">Link To GitHub</a></li>
@@ -69,7 +69,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/RE1.png" class="image fit thumb"><img src="images/thumbs/nyrealty.png" alt="" /></a>
 								<h3>NYC Realty</h3>
-								<p>Real Estate Website</p><br>
+								<p>Built full stack application with full CRUD capability utilizing all RESTful routes. Implemented MVC architecture while building app to adhere to best practices.</p><br>
 								<ul class="actions small">
 									<li><a href="https://nyrealty.herokuapp.com/" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/NYCRealEstate" target="_blank" class="button small">Link To GitHub</a></li>
@@ -78,7 +78,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/ms1.png" class="image fit thumb"><img src="images/thumbs/minesweeper.png" alt="" /></a>
 								<h3>Minesweeper</h3>
-								<p>Logic game</p><br>
+								<p>Used JavaScript to create game logic so mines are distributed randomly throughout the board each time game is played. Created UI using JavaScript DOM manipulation, HTML, and CSS to give users immersive visual and auditory experience</p><br>
 								<ul class="actions small">
 									<li><a href="https://haziq12.github.io/Minesweeper/" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/Minesweeper" target="_blank" class="button small">Link To GitHub</a></li>
