remove app button for hackathon

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 								<p>Runner up to the International Aid Hackathon. Worked on a cross functional team of UX Designers and Data Scientists to develop a fast, lightweight application for the
 									C-Suite that delivered data on water filtration distribution in Haiti.</p><br>
 								<ul class="actions small">
-									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
-									<li><a href="https://github.com/Haziq12/nextDate" target="_blank" class="button small">Link To GitHub</a></li>
+									<!-- <li><a href="" target="_blank" class="button small">Link To Application</a></li> -->
+									<li><a href="https://github.com/Haziq12/international-aid-api" target="_blank" class="button small">Link To GitHub</a></li>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
