add new apprenticeship and resume

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/IMG_3260.jpeg" alt="" /></a>
 					<h1><strong>I am Haziq</strong><br />
-						Developer<br />
-						Engineer<br />
-						Creator</h1>
+						Software Engineer<br />
+						JavaScript | Python | Node | React | SQL | NoSQL<br />
 				</div>
 			</header>
 
@@ -28,9 +27,9 @@
 						<header class="major">
 							<h2>Full Stack Developer</h2>
 						</header>
-						<p>I'm a full stack developer with a background in government emergency response and non profit work. My experiences have made me a resourceful, resilient, and adept problem solver and an excellent communicator. I look forward to new challenges and opportunities to deliver value with clean performative code.</p>
+						<p>My experiences in government emergency response, non profit, and teaching work have made me a resilient, resourceful, and adept problem solver. I'm skilled in Javascript, Python, Node.js, React, various database programs, and working with data structures/algorithms. I'm continuously pushing the limits of my knowledge and skill set professionally and personally.</p>
 						<ul class="actions">
-							<li><a href="https://docs.google.com/viewerng/viewer?url=https://github.com/Haziq12/Resume/raw/main/Resume.pdf" target="_blank" class="button">My Resume</a></li>
+							<li><a href="https://drive.google.com/file/d/1KeuKbAfSaITqJYEduQUzYCI-iTuebeqZ/view?usp=sharing" target="_blank" class="button">My Resume</a></li>
 						</ul>
 					</section>
 
@@ -38,6 +37,15 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/GrantGuide1.png" class="image fit thumb"><img src="images/thumbs/GrantGuide.png" alt="" /></a>
+								<h3>The Opportunity Project 2022, US Census Bureau </h3>
+								<p>Worked as a software engineer on a partnership project between the US Govt and General Assembly that uses open source govt. data to help state, local, tribal, and territorial governments navigate potential grant opportunities enabled by the Bipartisan Infrastructure Law (BIL).</p><br>
+								<ul class="actions small">
+									<li><a href="https://grantguide.herokuapp.com/" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://github.com/Haziq12/GrantAccess" target="_blank" class="button small">Link To GitHub</a></li>
+								</ul>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/hack1.png" class="image fit thumb"><img src="images/thumbs/hack.png" alt="" /></a>
 								<h3>Unlocking Communities Data Viz App</h3>
@@ -85,11 +93,6 @@
 								</ul>
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -97,7 +100,7 @@
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul> -->
+						</ul>  -->
 					</section>
 
 				
@@ -534,7 +537,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/haziq-naeem/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/Haziq12" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<!-- <li><a href="#" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-						<li><a href="https://docs.google.com/viewerng/viewer?url=https://github.com/Haziq12/Resume/raw/main/Resume.pdf" target="_blank" class="icon solid fa-file"><span class="label">Resume</span></a></li>
+						<li><a href="https://drive.google.com/file/d/1KeuKbAfSaITqJYEduQUzYCI-iTuebeqZ/view?usp=sharing" target="_blank" class="icon solid fa-file"><span class="label">Resume</span></a></li>
 					</ul>
 					<ul>
 						<li>
