update resume links, add new links for nextDate and jobsApp, create section for jobsApp

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<a href="#" class="image avatar"><img src="images/IMG_3260.jpeg" alt="" /></a>
 					<h1><strong>I am Haziq</strong><br />
 						Software Engineer<br />
-						JavaScript | Python | Node | React | SQL | NoSQL<br />
+						JavaScript | TypeScript | Python | Node | React | SQL | NoSQL<br />
 				</div>
 			</header>
 
@@ -27,9 +27,9 @@
 						<header class="major">
 							<h2>Full Stack Developer</h2>
 						</header>
-						<p>My experiences in government emergency response, non profit, and teaching work have made me a resilient, resourceful, and adept problem solver. I'm skilled in Javascript, Python, Node.js, React, various database programs, and working with data structures/algorithms. I'm continuously pushing the limits of my knowledge and skill set professionally and personally.</p>
+						<p>I have developed a strong ability to handle high-pressure, fast-paced situations and make quick decisions from my past experiences in govt. emergency response, non profit, and teaching work. My technical skills in Javascript, Python, Node, React, and various databases make me well-suited to tackle software engineering challenges.  I am always looking to expand my knowledge and skillset, and I am excited to bring my problem-solving mindset and ability to work well in a team.</p>
 						<ul class="actions">
-							<li><a href="https://drive.google.com/file/d/1KeuKbAfSaITqJYEduQUzYCI-iTuebeqZ/view?usp=sharing" target="_blank" class="button">My Resume</a></li>
+							<li><a href="https://docs.google.com/document/d/1Z28IDD8ASvLwSGJWjYIrUm_nu4KUVuO3kKXIJrW0qew/edit?usp=sharing" target="_blank" class="button">My Resume</a></li>
 						</ul>
 					</section>
 
@@ -38,9 +38,18 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/jobTrackerHome.png" class="image fit thumb"><img src="images/fulls/allJobs.png" alt="" /></a>
+								<h3>Job Tracking Application</h3>
+								<p>Created a full stack MERN application where users can add and save jobs they've applied to and keep track of application status. The application also helps users visualize their job application data.</p><br>
+								<ul class="actions small">
+									<li><a href="https://jobapp-4p1e.onrender.com" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://github.com/Haziq12/job-tracker" target="_blank" class="button small">Link To GitHub</a></li>
+								</ul>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/GrantGuide1.png" class="image fit thumb"><img src="images/thumbs/GrantGuide.png" alt="" /></a>
 								<h3>The Opportunity Project 2022, US Census Bureau </h3>
-								<p>Worked as a software engineer on a partnership project between the US Govt and General Assembly that uses open source govt. data to help state, local, tribal, and territorial governments navigate potential grant opportunities enabled by the Bipartisan Infrastructure Law (BIL).</p><br>
+								<p>Worked as a software engineer on a partnership project between the US Govt and General Assembly that uses open source government data to help state, local, tribal, and territorial governments navigate potential grant opportunities enabled by the Bipartisan Infrastructure Law (BIL).</p><br>
 								<ul class="actions small">
 									<li><a href="https://grantguide.herokuapp.com/" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/GrantAccess" target="_blank" class="button small">Link To GitHub</a></li>
@@ -61,7 +70,7 @@
 								<h3>nextDate</h3>
 								<p>Collaborated with developers using SCRUM methodology to design and develop a full stack MERN application that enables users to meet, date, and connect with people. Implemeted TicketMaster API to help users create date plans.</p><br>
 								<ul class="actions small">
-									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://nextdates.onrender.com" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/nextDate" target="_blank" class="button small">Link To GitHub</a></li>
 								</ul>
 							</article>
@@ -537,7 +546,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/haziq-naeem/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/Haziq12" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<!-- <li><a href="#" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-						<li><a href="https://drive.google.com/file/d/1KeuKbAfSaITqJYEduQUzYCI-iTuebeqZ/view?usp=sharing" target="_blank" class="icon solid fa-file"><span class="label">Resume</span></a></li>
+						<li><a href="https://docs.google.com/document/d/1Z28IDD8ASvLwSGJWjYIrUm_nu4KUVuO3kKXIJrW0qew/edit?usp=sharing" target="_blank" class="icon solid fa-file"><span class="label">Resume</span></a></li>
 					</ul>
 					<ul>
 						<li>
