--- a/index.html
+++ b/index.html
@@ -39,25 +39,34 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/jobTrackerHome.png" class="image fit thumb"><img src="images/fulls/allJobs.png" alt="" /></a>
-								<h3>Job Tracking Application</h3>
-								<p>Created a full stack MERN application where users can add and save jobs they've applied to and keep track of application status. The application also helps users visualize their job application data.</p><br>
+								<h3>MERN Project - Job Tracker</h3>
+								<p>Keep track of your job search by saving information about the jobs you've applied to. You can keep track of the status of a job, filter and sort for specific jobs you've applied to, see job application statistics, and visualize using bar graphs and area charts so you can job search more effectively. Deployed using render.com</p><br>
 								<ul class="actions small">
 									<li><a href="https://jobapp-4p1e.onrender.com" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/job-tracker" target="_blank" class="button small">Link To GitHub</a></li>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/GrantGuide1.png" class="image fit thumb"><img src="images/thumbs/GrantGuide.png" alt="" /></a>
-								<h3>The Opportunity Project 2022, US Census Bureau </h3>
-								<p>Worked as a software engineer on a partnership project between the US Govt and General Assembly that uses open source government data to help state, local, tribal, and territorial governments navigate potential grant opportunities enabled by the Bipartisan Infrastructure Law (BIL).</p><br>
+								<a href="images/fulls/typescript-gym.png" class="image fit thumb"><img src="images/fulls/typescript-gym.png" alt="" /></a>
+								<h3>TypeScript + React Project - Mock Gym Website</h3>
+								<p>This is a TypeScript and React website I built using Vite, react-hook-forms, and tailwind. Deployed on cloudflare.</p><br>
 								<ul class="actions small">
-									<li><a href="https://grantguide.herokuapp.com/" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://typescript-gym-cv4.pages.dev/" target="_blank" class="button small">Link To Application</a></li>
+									<li><a href="https://github.com/Haziq12/typescript-gym" target="_blank" class="button small">Link To GitHub</a></li>
+								</ul>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/GrantGuide1.png" class="image fit thumb"><img src="images/thumbs/GrantGuide.png" alt="" /></a>
+								<h3>MERN Project - GrantGuide</h3>
+								<p>Worked as a software engineer on a partnership project between the US Govt and General Assembly that uses open source government data to help state, local, tribal, and territorial governments navigate potential grant opportunities enabled by the Bipartisan Infrastructure Law (BIL). Was deployed on Heroku but no longer supported.</p><br>
+								<ul class="actions small">
+									<!-- <li><a href="https://grantguide.herokuapp.com/" target="_blank" class="button small">Link To Application</a></li> -->
 									<li><a href="https://github.com/Haziq12/GrantAccess" target="_blank" class="button small">Link To GitHub</a></li>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/hack1.png" class="image fit thumb"><img src="images/thumbs/hack.png" alt="" /></a>
-								<h3>Unlocking Communities Data Viz App</h3>
+								<h3>Python, Flask, postgreSQL, Jinja - Unlocking Communities</h3>
 								<p>Runner up to the International Aid Hackathon. Worked on a cross functional team of UX Designers and Data Scientists to develop a fast, lightweight application for the
 									C-Suite that delivered data on water filtration distribution in Haiti.</p><br>
 								<ul class="actions small">
@@ -67,7 +76,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/nextDate1.png" class="image fit thumb"><img src="images/thumbs/nextDate.png" alt="" /></a>
-								<h3>nextDate</h3>
+								<h3>MERN Project - nextDate</h3>
 								<p>Collaborated with developers using SCRUM methodology to design and develop a full stack MERN application that enables users to meet, date, and connect with people. Implemeted TicketMaster API to help users create date plans.</p><br>
 								<ul class="actions small">
 									<li><a href="https://nextdates.onrender.com" target="_blank" class="button small">Link To Application</a></li>
@@ -76,7 +85,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/boxxd1.png" class="image fit thumb"><img src="images/thumbs/boxd.png" alt="" /></a>
-								<h3>Boxd</h3>
+								<h3>Python, Flask, Jinja, and PostgreSQL - Boxd</h3>
 								<p>Built ecommerce website with Python, Flask, Jinja, and PostgreSQL. Designed backend models, built out model associations, wrote logic for all database queries and served data to front end</p><br>
 								<ul class="actions small">
 									<li><a href="https://next-date-front.herokuapp.com/login" target="_blank" class="button small">Link To Application</a></li>
@@ -85,8 +94,8 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/RE1.png" class="image fit thumb"><img src="images/thumbs/nyrealty.png" alt="" /></a>
-								<h3>NYC Realty</h3>
-								<p>Built full stack application with full CRUD capability utilizing all RESTful routes. Implemented MVC architecture while building app to adhere to best practices.</p><br>
+								<h3>JavaScript, EJS, Express - NYC Realty</h3>
+								<p>Built full stack application with full CRUD capability utilizing RESTful routes(GET, POST, PUT, PATCH, DELETE). Implemented MVC architecture while building app following best practices.</p><br>
 								<ul class="actions small">
 									<li><a href="https://nyrealty.herokuapp.com/" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/NYCRealEstate" target="_blank" class="button small">Link To GitHub</a></li>
