update job tracker description and title, change css mediaquery fontsize to 14px

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/jobTrackerHome.png" class="image fit thumb"><img src="images/fulls/allJobs.png" alt="" /></a>
-								<h3>MERN Project - Job Tracker</h3>
-								<p>Keep track of your job search by saving information about the jobs you've applied to. You can keep track of the status of a job, filter and sort for specific jobs you've applied to, see job application statistics, and visualize using bar graphs and area charts so you can job search more effectively. Deployed using render.com</p><br>
+								<h3>MERN Project - Jobd</h3>
+								<p>Take your job search to the next level. Save job details like interview status, location, type of job, and more. Keep track of each job status easily, filter and sort for specific jobs you've applied to, see job application statistics, and visualize using bar graphs and area charts so you can job search more effectively. Deployed using render.com</p><br>
 								<ul class="actions small">
 									<li><a href="https://jobapp-4p1e.onrender.com" target="_blank" class="button small">Link To Application</a></li>
 									<li><a href="https://github.com/Haziq12/job-tracker" target="_blank" class="button small">Link To GitHub</a></li>
