edit about section and job image

--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 						<header class="major">
 							<h2>Full Stack Developer</h2>
 						</header>
-						<p>I have developed a strong ability to handle high-pressure, fast-paced situations and make quick decisions from my past experiences in govt. emergency response, non profit, and teaching work. My technical skills in Javascript, Python, Node, React, and various databases make me well-suited to tackle software engineering challenges.  I am always looking to expand my knowledge and skillset, and I am excited to bring my problem-solving mindset and ability to work well in a team.</p>
+						<p>Are you looking for a well-rounded Software Engineer who is motivated, adaptable, and has a passion for clean, readable, and performative code? Look no further!<br><br>
+
+							I'm a City University of New York graduate with a Bachelor's of Science in Economics and also a graduate of General Assembly's software engineering program.<br><br>
+							
+							I have proven expertise in Javascript, TypeScript, Python, Node, React, SQL and NoSQL databases and I have a deep understanding and curiosity of what it takes to build scalable, efficient software.</p>
 						<ul class="actions">
-							<li><a href="https://docs.google.com/document/d/1Z28IDD8ASvLwSGJWjYIrUm_nu4KUVuO3kKXIJrW0qew/edit?usp=sharing" target="_blank" class="button">My Resume</a></li>
+							<li><a href="https://docs.google.com/document/d/1Z28IDD8ASvLwSGJWjYIrUm_nu4KUVuO3kKXIJrW0qew/edit?usp=sharing" target="_blank" class="button">Resume</a></li>
 						</ul>
 					</section>
 
@@ -38,7 +42,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/jobTrackerHome.png" class="image fit thumb"><img src="images/fulls/allJobs.png" alt="" /></a>
+								<a href="images/fulls/jobdSearch.png" class="image fit thumb"><img src="images/fulls/jobd.png" alt="" /></a>
 								<h3>MERN Project - Jobd</h3>
 								<p>Take your job search to the next level. Save job details like interview status, location, type of job, and more. Keep track of each job status easily, filter and sort for specific jobs you've applied to, see job application statistics, and visualize using bar graphs and area charts so you can job search more effectively. Deployed using render.com</p><br>
 								<ul class="actions small">
